--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^1.1.3",
-    "express": "^4.15.3"
+    "express": "^4.15.3",
+    "nunjucks": "^3.0.1"
   }
 }
